// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`given that API is disabled, should match snapshot 1`] = `
<View
  style={
    [
      {
        "flex": 1,
      },
      {
        "backgroundColor": "#ffffff",
      },
    ]
  }
>
  <View
    style={
      [
        {
          "borderBottomWidth": 1,
        },
        {
          "backgroundColor": "#EBEBEB",
        },
        {
          "borderColor": "#DEDEDE",
        },
      ]
    }
  >
    <View
      style={
        {
          "alignItems": "center",
          "flexDirection": "row",
          "height": 82.14285714285714,
          "marginHorizontal": 24,
        }
      }
    >
      <Text
        numberOfLines={1}
        style={
          [
            {
              "fontSize": 40,
              "fontWeight": "bold",
              "left": 0,
              "marginHorizontal": 140,
              "position": "absolute",
              "right": 0,
              "textAlign": "center",
            },
            {
              "color": "#181818",
            },
          ]
        }
      >
        First API
      </Text>
      <View
        accessibilityState={
          {
            "busy": undefined,
            "checked": undefined,
            "disabled": undefined,
            "expanded": undefined,
            "selected": undefined,
          }
        }
        accessibilityValue={
          {
            "max": undefined,
            "min": undefined,
            "now": undefined,
            "text": undefined,
          }
        }
        accessible={true}
        collapsable={false}
        focusable={true}
        onClick={[Function]}
        onResponderGrant={[Function]}
        onResponderMove={[Function]}
        onResponderRelease={[Function]}
        onResponderTerminate={[Function]}
        onResponderTerminationRequest={[Function]}
        onStartShouldSetResponder={[Function]}
        style={
          {
            "marginRight": 20,
            "opacity": 1,
          }
        }
      >
        <Text
          style={
            [
              {
                "fontSize": 36,
                "margin": 16,
                "textAlign": "center",
              },
              {
                "color": "#007aa3",
              },
            ]
          }
        >
          ‹ Back
        </Text>
      </View>
      <View
        style={
          {
            "flex": 1,
          }
        }
      />
    </View>
  </View>
  <RCTScrollView
    contentContainerStyle={
      [
        {
          "flexGrow": 1,
        },
        {
          "backgroundColor": "#ffffff",
        },
      ]
    }
    data={
      [
        {
          "handler": [Function],
          "isSelected": true,
          "label": "Success",
        },
        {
          "handler": [Function],
          "isSelected": false,
          "label": "Error",
        },
      ]
    }
    getItem={[Function]}
    getItemCount={[Function]}
    keyExtractor={[Function]}
    onContentSizeChange={[Function]}
    onLayout={[Function]}
    onMomentumScrollBegin={[Function]}
    onMomentumScrollEnd={[Function]}
    onScroll={[Function]}
    onScrollBeginDrag={[Function]}
    onScrollEndDrag={[Function]}
    removeClippedSubviews={false}
    renderItem={[Function]}
    scrollEventThrottle={50}
    stickyHeaderIndices={[]}
    style={
      {
        "flexGrow": 1,
      }
    }
    viewabilityConfigCallbackPairs={[]}
  >
    <View>
      <View
        onFocusCapture={[Function]}
        onLayout={[Function]}
        style={null}
      >
        <View
          accessibilityState={
            {
              "busy": undefined,
              "checked": undefined,
              "disabled": undefined,
              "expanded": undefined,
              "selected": undefined,
            }
          }
          accessibilityValue={
            {
              "max": undefined,
              "min": undefined,
              "now": undefined,
              "text": undefined,
            }
          }
          accessible={true}
          collapsable={false}
          focusable={true}
          onClick={[Function]}
          onResponderGrant={[Function]}
          onResponderMove={[Function]}
          onResponderRelease={[Function]}
          onResponderTerminate={[Function]}
          onResponderTerminationRequest={[Function]}
          onStartShouldSetResponder={[Function]}
          style={
            {
              "borderBottomWidth": 1,
              "borderColor": "#DEDEDE",
              "flex": 1,
              "flexDirection": "row",
              "justifyContent": "space-between",
              "opacity": 1,
              "paddingHorizontal": 40,
              "paddingVertical": 19.714285714285715,
            }
          }
          testID="responseListItem0"
        >
          <Text
            style={
              [
                {
                  "flex": 1,
                  "fontSize": 36,
                  "fontWeight": "400",
                  "marginEnd": 20,
                },
                {
                  "color": "#181818",
                },
              ]
            }
          >
            Success
          </Text>
          <Text
            style={
              [
                {
                  "fontSize": 36,
                },
                {
                  "color": "#007aa3",
                },
              ]
            }
          >
            ✓
          </Text>
        </View>
      </View>
      <View
        onFocusCapture={[Function]}
        onLayout={[Function]}
        style={null}
      >
        <View
          accessibilityState={
            {
              "busy": undefined,
              "checked": undefined,
              "disabled": undefined,
              "expanded": undefined,
              "selected": undefined,
            }
          }
          accessibilityValue={
            {
              "max": undefined,
              "min": undefined,
              "now": undefined,
              "text": undefined,
            }
          }
          accessible={true}
          collapsable={false}
          focusable={true}
          onClick={[Function]}
          onResponderGrant={[Function]}
          onResponderMove={[Function]}
          onResponderRelease={[Function]}
          onResponderTerminate={[Function]}
          onResponderTerminationRequest={[Function]}
          onStartShouldSetResponder={[Function]}
          style={
            {
              "borderBottomWidth": 1,
              "borderColor": "#DEDEDE",
              "flex": 1,
              "flexDirection": "row",
              "justifyContent": "space-between",
              "opacity": 1,
              "paddingHorizontal": 40,
              "paddingVertical": 19.714285714285715,
            }
          }
          testID="responseListItem1"
        >
          <Text
            style={
              [
                {
                  "flex": 1,
                  "fontSize": 36,
                  "fontWeight": "400",
                  "marginEnd": 20,
                },
                {
                  "color": "#181818",
                },
              ]
            }
          >
            Error
          </Text>
        </View>
      </View>
    </View>
  </RCTScrollView>
  <View
    style={
      [
        {
          "borderTopWidth": 1,
          "height": 50,
        },
        {
          "backgroundColor": "#EBEBEB",
        },
        {
          "borderColor": "#DEDEDE",
        },
      ]
    }
  >
    <View
      accessibilityState={
        {
          "busy": undefined,
          "checked": undefined,
          "disabled": undefined,
          "expanded": undefined,
          "selected": undefined,
        }
      }
      accessibilityValue={
        {
          "max": undefined,
          "min": undefined,
          "now": undefined,
          "text": undefined,
        }
      }
      accessible={true}
      collapsable={false}
      focusable={true}
      onClick={[Function]}
      onResponderGrant={[Function]}
      onResponderMove={[Function]}
      onResponderRelease={[Function]}
      onResponderTerminate={[Function]}
      onResponderTerminationRequest={[Function]}
      onStartShouldSetResponder={[Function]}
      style={
        {
          "alignItems": "center",
          "flex": 1,
          "justifyContent": "center",
          "marginHorizontal": 24,
          "opacity": 1,
        }
      }
    >
      <Text
        numberOfLines={1}
        style={
          [
            {
              "fontSize": 36,
              "textAlign": "center",
            },
            {
              "color": "#007aa3",
            },
          ]
        }
      >
        Enable API Mock
      </Text>
    </View>
  </View>
</View>
`;

exports[`given that API is enabled, should match snapshot 1`] = `
<View
  style={
    [
      {
        "flex": 1,
      },
      {
        "backgroundColor": "#ffffff",
      },
    ]
  }
>
  <View
    style={
      [
        {
          "borderBottomWidth": 1,
        },
        {
          "backgroundColor": "#EBEBEB",
        },
        {
          "borderColor": "#DEDEDE",
        },
      ]
    }
  >
    <View
      style={
        {
          "alignItems": "center",
          "flexDirection": "row",
          "height": 82.14285714285714,
          "marginHorizontal": 24,
        }
      }
    >
      <Text
        numberOfLines={1}
        style={
          [
            {
              "fontSize": 40,
              "fontWeight": "bold",
              "left": 0,
              "marginHorizontal": 140,
              "position": "absolute",
              "right": 0,
              "textAlign": "center",
            },
            {
              "color": "#181818",
            },
          ]
        }
      >
        First API
      </Text>
      <View
        accessibilityState={
          {
            "busy": undefined,
            "checked": undefined,
            "disabled": undefined,
            "expanded": undefined,
            "selected": undefined,
          }
        }
        accessibilityValue={
          {
            "max": undefined,
            "min": undefined,
            "now": undefined,
            "text": undefined,
          }
        }
        accessible={true}
        collapsable={false}
        focusable={true}
        onClick={[Function]}
        onResponderGrant={[Function]}
        onResponderMove={[Function]}
        onResponderRelease={[Function]}
        onResponderTerminate={[Function]}
        onResponderTerminationRequest={[Function]}
        onStartShouldSetResponder={[Function]}
        style={
          {
            "marginRight": 20,
            "opacity": 1,
          }
        }
      >
        <Text
          style={
            [
              {
                "fontSize": 36,
                "margin": 16,
                "textAlign": "center",
              },
              {
                "color": "#007aa3",
              },
            ]
          }
        >
          ‹ Back
        </Text>
      </View>
      <View
        style={
          {
            "flex": 1,
          }
        }
      />
    </View>
  </View>
  <RCTScrollView
    contentContainerStyle={
      [
        {
          "flexGrow": 1,
        },
        {
          "backgroundColor": "#ffffff",
        },
      ]
    }
    data={
      [
        {
          "handler": [Function],
          "isSelected": true,
          "label": "Success",
        },
        {
          "handler": [Function],
          "isSelected": false,
          "label": "Error",
        },
      ]
    }
    getItem={[Function]}
    getItemCount={[Function]}
    keyExtractor={[Function]}
    onContentSizeChange={[Function]}
    onLayout={[Function]}
    onMomentumScrollBegin={[Function]}
    onMomentumScrollEnd={[Function]}
    onScroll={[Function]}
    onScrollBeginDrag={[Function]}
    onScrollEndDrag={[Function]}
    removeClippedSubviews={false}
    renderItem={[Function]}
    scrollEventThrottle={50}
    stickyHeaderIndices={[]}
    style={
      {
        "flexGrow": 1,
      }
    }
    viewabilityConfigCallbackPairs={[]}
  >
    <View>
      <View
        onFocusCapture={[Function]}
        onLayout={[Function]}
        style={null}
      >
        <View
          accessibilityState={
            {
              "busy": undefined,
              "checked": undefined,
              "disabled": undefined,
              "expanded": undefined,
              "selected": undefined,
            }
          }
          accessibilityValue={
            {
              "max": undefined,
              "min": undefined,
              "now": undefined,
              "text": undefined,
            }
          }
          accessible={true}
          collapsable={false}
          focusable={true}
          onClick={[Function]}
          onResponderGrant={[Function]}
          onResponderMove={[Function]}
          onResponderRelease={[Function]}
          onResponderTerminate={[Function]}
          onResponderTerminationRequest={[Function]}
          onStartShouldSetResponder={[Function]}
          style={
            {
              "borderBottomWidth": 1,
              "borderColor": "#DEDEDE",
              "flex": 1,
              "flexDirection": "row",
              "justifyContent": "space-between",
              "opacity": 1,
              "paddingHorizontal": 40,
              "paddingVertical": 19.714285714285715,
            }
          }
          testID="responseListItem0"
        >
          <Text
            style={
              [
                {
                  "flex": 1,
                  "fontSize": 36,
                  "fontWeight": "400",
                  "marginEnd": 20,
                },
                {
                  "color": "#181818",
                },
              ]
            }
          >
            Success
          </Text>
          <Text
            style={
              [
                {
                  "fontSize": 36,
                },
                {
                  "color": "#007aa3",
                },
              ]
            }
          >
            ✓
          </Text>
        </View>
      </View>
      <View
        onFocusCapture={[Function]}
        onLayout={[Function]}
        style={null}
      >
        <View
          accessibilityState={
            {
              "busy": undefined,
              "checked": undefined,
              "disabled": undefined,
              "expanded": undefined,
              "selected": undefined,
            }
          }
          accessibilityValue={
            {
              "max": undefined,
              "min": undefined,
              "now": undefined,
              "text": undefined,
            }
          }
          accessible={true}
          collapsable={false}
          focusable={true}
          onClick={[Function]}
          onResponderGrant={[Function]}
          onResponderMove={[Function]}
          onResponderRelease={[Function]}
          onResponderTerminate={[Function]}
          onResponderTerminationRequest={[Function]}
          onStartShouldSetResponder={[Function]}
          style={
            {
              "borderBottomWidth": 1,
              "borderColor": "#DEDEDE",
              "flex": 1,
              "flexDirection": "row",
              "justifyContent": "space-between",
              "opacity": 1,
              "paddingHorizontal": 40,
              "paddingVertical": 19.714285714285715,
            }
          }
          testID="responseListItem1"
        >
          <Text
            style={
              [
                {
                  "flex": 1,
                  "fontSize": 36,
                  "fontWeight": "400",
                  "marginEnd": 20,
                },
                {
                  "color": "#181818",
                },
              ]
            }
          >
            Error
          </Text>
        </View>
      </View>
    </View>
  </RCTScrollView>
  <View
    style={
      [
        {
          "borderTopWidth": 1,
          "height": 50,
        },
        {
          "backgroundColor": "#EBEBEB",
        },
        {
          "borderColor": "#DEDEDE",
        },
      ]
    }
  >
    <View
      accessibilityState={
        {
          "busy": undefined,
          "checked": undefined,
          "disabled": undefined,
          "expanded": undefined,
          "selected": undefined,
        }
      }
      accessibilityValue={
        {
          "max": undefined,
          "min": undefined,
          "now": undefined,
          "text": undefined,
        }
      }
      accessible={true}
      collapsable={false}
      focusable={true}
      onClick={[Function]}
      onResponderGrant={[Function]}
      onResponderMove={[Function]}
      onResponderRelease={[Function]}
      onResponderTerminate={[Function]}
      onResponderTerminationRequest={[Function]}
      onStartShouldSetResponder={[Function]}
      style={
        {
          "alignItems": "center",
          "flex": 1,
          "justifyContent": "center",
          "marginHorizontal": 24,
          "opacity": 1,
        }
      }
    >
      <Text
        numberOfLines={1}
        style={
          [
            {
              "fontSize": 36,
              "textAlign": "center",
            },
            {
              "color": "#EE0003",
            },
          ]
        }
      >
        Disable API Mock
      </Text>
    </View>
  </View>
</View>
`;
